[gd_scene load_steps=41 format=3 uid="uid://drenu2srr1q61"]

[ext_resource type="Script" uid="uid://uby0stqpkrd4" path="res://player.gd" id="1_hqtel"]
[ext_resource type="PackedScene" uid="uid://dxnwbn3vqjhme" path="res://character.tscn" id="1_i3pqv"]
[ext_resource type="Script" uid="uid://dbwpdvt46lvhx" path="res://Player/movement_controller.gd" id="2_hqtel"]
[ext_resource type="AudioStream" uid="uid://dsqa02vl5r3pe" path="res://Models/TerrainAssets/Sounds/footstep_grass_000.ogg" id="3_606se"]
[ext_resource type="AudioStream" uid="uid://bpuiheyhw57nl" path="res://Player/Sounds/punch_000.ogg" id="3_pgbbb"]
[ext_resource type="Script" uid="uid://bsp1f3vpcgvsx" path="res://Player/camera_controller.gd" id="3_sweqy"]
[ext_resource type="AudioStream" uid="uid://cnyelwh785m4" path="res://Player/Sounds/punch_001.ogg" id="4_331ug"]
[ext_resource type="AudioStream" uid="uid://di0grnb3gdfs7" path="res://Models/TerrainAssets/Sounds/footstep_grass_001.ogg" id="4_u1c27"]
[ext_resource type="AudioStream" uid="uid://cmjbmy82877rv" path="res://Player/Sounds/punch_002.ogg" id="5_ny14h"]
[ext_resource type="AudioStream" uid="uid://dpxmbuwa203s3" path="res://Models/TerrainAssets/Sounds/footstep_grass_002.ogg" id="5_op7ga"]
[ext_resource type="AudioStream" uid="uid://ba7nrhubnfdlp" path="res://Player/Sounds/punch_003.ogg" id="6_ibah8"]
[ext_resource type="AudioStream" uid="uid://by1tulnhl3cu8" path="res://Models/TerrainAssets/Sounds/footstep_grass_003.ogg" id="6_q13i1"]
[ext_resource type="AudioStream" uid="uid://0degotd2qq62" path="res://Models/TerrainAssets/Sounds/footstep_grass_004.ogg" id="7_pylmc"]
[ext_resource type="AudioStream" uid="uid://blcrp4yiuqsbm" path="res://Models/TerrainAssets/Sounds/impactMining_000.ogg" id="8_5tmop"]
[ext_resource type="Resource" uid="uid://ilxft0txduu2" path="res://Player/MovementStates/run.tres" id="8_pbfsw"]
[ext_resource type="Resource" uid="uid://orrjibpllpgs" path="res://Player/MovementStates/sprint.tres" id="9_5tmop"]
[ext_resource type="AudioStream" uid="uid://bkkks80f44t4c" path="res://Models/TerrainAssets/Sounds/impactMining_001.ogg" id="9_7ahtn"]
[ext_resource type="Resource" uid="uid://fvq8xi66kxov" path="res://Player/MovementStates/stand.tres" id="10_7ahtn"]
[ext_resource type="AudioStream" uid="uid://b5wmj52a4el6h" path="res://Models/TerrainAssets/Sounds/impactMining_002.ogg" id="10_7lmhl"]
[ext_resource type="Resource" uid="uid://c0aaanr84ak8r" path="res://Player/MovementStates/walk.tres" id="11_7lmhl"]
[ext_resource type="AudioStream" uid="uid://7spdhdgjodck" path="res://Models/TerrainAssets/Sounds/impactMining_003.ogg" id="11_dx0e4"]
[ext_resource type="Resource" uid="uid://c1ivhxsl0ari0" path="res://Player/JumpStates/air_jump.tres" id="12_dx0e4"]
[ext_resource type="AudioStream" uid="uid://bddt17bxj83ky" path="res://Models/TerrainAssets/Sounds/impactMining_004.ogg" id="12_jm5j8"]
[ext_resource type="AudioStream" uid="uid://c6pb1benvb1qh" path="res://Models/TerrainAssets/Sounds/footstep_carpet_000.ogg" id="13_7hik5"]
[ext_resource type="Resource" uid="uid://s4tjcrrseqcn" path="res://Player/JumpStates/ground_jump.tres" id="13_jm5j8"]
[ext_resource type="AudioStream" uid="uid://btjf1o37guvm7" path="res://Models/TerrainAssets/Sounds/footstep_carpet_001.ogg" id="14_qtqh7"]
[ext_resource type="AudioStream" uid="uid://dhdkga2768fne" path="res://Models/TerrainAssets/Sounds/footstep_carpet_002.ogg" id="15_2wuci"]
[ext_resource type="AudioStream" uid="uid://dtqaa5h1iamjq" path="res://Models/TerrainAssets/Sounds/footstep_carpet_003.ogg" id="16_iruf7"]
[ext_resource type="AudioStream" uid="uid://c4n2d6efnm4qw" path="res://Models/TerrainAssets/Sounds/footstep_carpet_004.ogg" id="17_j5n4i"]
[ext_resource type="AudioStream" uid="uid://cgbec3thoh4ga" path="res://Models/TerrainAssets/Sounds/footstep_water_000.ogg" id="18_hl5qd"]
[ext_resource type="AudioStream" uid="uid://cpgq77yue6q8k" path="res://Models/TerrainAssets/Sounds/footstep_water_001.ogg" id="19_ek41f"]
[ext_resource type="AudioStream" uid="uid://bft2cc51sjxib" path="res://Models/TerrainAssets/Sounds/footstep_water_002.ogg" id="20_khis8"]
[ext_resource type="AudioStream" uid="uid://bh7nfohghhjsn" path="res://Models/TerrainAssets/Sounds/footstep_water_003.ogg" id="21_b88wv"]
[ext_resource type="AudioStream" uid="uid://bxpkarxjwnllh" path="res://Models/TerrainAssets/Sounds/footstep_water_004.ogg" id="22_pgbbb"]
[ext_resource type="AudioStream" uid="uid://cs3x776x7cm5k" path="res://Models/TerrainAssets/Sounds/footstep_snow_000.ogg" id="23_331ug"]
[ext_resource type="AudioStream" uid="uid://jpl6dmmc67l" path="res://Models/TerrainAssets/Sounds/footstep_snow_001.ogg" id="24_ny14h"]
[ext_resource type="AudioStream" uid="uid://ei6gmj08uajx" path="res://Models/TerrainAssets/Sounds/footstep_snow_002.ogg" id="25_ibah8"]
[ext_resource type="AudioStream" uid="uid://dwsu0koffh3xr" path="res://Models/TerrainAssets/Sounds/footstep_snow_003.ogg" id="26_3iwfv"]
[ext_resource type="AudioStream" uid="uid://dwcrmy0der18a" path="res://Models/TerrainAssets/Sounds/footstep_snow_004.ogg" id="27_qwsg1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3pqv"]
radius = 0.07

[node name="Player" instance=ExtResource("1_i3pqv")]
script = ExtResource("1_hqtel")
punch_sounds = [ExtResource("3_pgbbb"), ExtResource("4_331ug"), ExtResource("5_ny14h"), ExtResource("6_ibah8")]
footstep_sounds = {
"Grass": [ExtResource("3_606se"), ExtResource("4_u1c27"), ExtResource("5_op7ga"), ExtResource("6_q13i1"), ExtResource("7_pylmc")],
"Rock": [ExtResource("8_5tmop"), ExtResource("9_7ahtn"), ExtResource("10_7lmhl"), ExtResource("11_dx0e4"), ExtResource("12_jm5j8")],
"Sand": [ExtResource("13_7hik5"), ExtResource("14_qtqh7"), ExtResource("15_2wuci"), ExtResource("16_iruf7"), ExtResource("17_j5n4i")],
"Snow": [ExtResource("23_331ug"), ExtResource("24_ny14h"), ExtResource("25_ibah8"), ExtResource("26_3iwfv"), ExtResource("27_qwsg1")],
"Water": [ExtResource("18_hl5qd"), ExtResource("19_ek41f"), ExtResource("20_khis8"), ExtResource("21_b88wv"), ExtResource("22_pgbbb")]
}
movement_states = {
"run": ExtResource("8_pbfsw"),
"sprint": ExtResource("9_5tmop"),
"stand": ExtResource("10_7ahtn"),
"walk": ExtResource("11_7lmhl")
}
max_air_jump = 1
jump_states = {
"air_jump": ExtResource("12_dx0e4"),
"ground_jump": ExtResource("13_jm5j8")
}

[node name="MovementController" type="Node" parent="." index="0" node_paths=PackedStringArray("player", "mesh_root")]
script = ExtResource("2_hqtel")
player = NodePath("..")
mesh_root = NodePath("../MeshRoot")

[node name="Skeleton3D" parent="MeshRoot/animated_monkey_man_trimmed/Armature" index="0"]
bones/0/position = Vector3(3.29469, 1.66765, -62.3804)
bones/0/rotation = Quaternion(-0.717198, -0.0438867, 0.00667123, 0.695454)
bones/1/rotation = Quaternion(-0.0281732, 0.00404569, 0.000149372, 0.999595)
bones/2/rotation = Quaternion(0.0191859, -0.0119903, -0.0062315, 0.999725)
bones/3/rotation = Quaternion(0.0192991, -0.0120325, -0.00571423, 0.999725)
bones/4/rotation = Quaternion(0.0432754, -0.000684417, 0.00848805, 0.999027)
bones/5/rotation = Quaternion(0.0344939, -0.0219881, 0.0401547, 0.998356)
bones/7/rotation = Quaternion(-0.5514, -0.440615, 0.568454, -0.422701)
bones/8/rotation = Quaternion(0.499165, 0.130308, 0.095863, 0.851273)
bones/9/rotation = Quaternion(-0.021102, 0.00972704, 0.220606, 0.975086)
bones/10/rotation = Quaternion(0.103362, 0.11926, -0.0398366, 0.986664)
bones/11/rotation = Quaternion(-0.0375803, -0.129641, 0.141442, 0.980701)
bones/12/rotation = Quaternion(0.047007, 0.0216673, -0.139421, 0.98888)
bones/13/rotation = Quaternion(0.0689669, 0.00828863, -0.0265268, 0.997232)
bones/15/rotation = Quaternion(0.200673, -0.0222209, -0.107382, 0.973502)
bones/16/rotation = Quaternion(0.493508, 0.00370394, -0.0359508, 0.86899)
bones/17/rotation = Quaternion(0.00301172, -0.00272338, -0.017814, 0.999833)
bones/19/rotation = Quaternion(0.640952, -0.379896, 0.50965, 0.430251)
bones/20/rotation = Quaternion(0.468651, -0.111518, -0.108336, 0.869594)
bones/21/rotation = Quaternion(-0.0187453, -0.0107898, -0.248936, 0.968278)
bones/22/rotation = Quaternion(-0.000961889, -0.0365568, 0.0887675, 0.995381)
bones/23/rotation = Quaternion(-0.00702466, 0.0252866, -0.0985965, 0.994781)
bones/24/rotation = Quaternion(0.0870956, -0.057908, 0.0374059, 0.993812)
bones/25/rotation = Quaternion(-0.0056261, -0.0140041, 0.00668954, 0.999864)
bones/27/rotation = Quaternion(0.176714, 0.00394002, 0.0866723, 0.980431)
bones/28/rotation = Quaternion(0.462806, -0.00254185, 0.0386534, 0.885613)
bones/29/rotation = Quaternion(-0.0570987, 0.000920613, 0.00859262, 0.998331)
bones/31/rotation = Quaternion(0.0313334, 0.130287, 0.990131, -0.0410313)
bones/32/rotation = Quaternion(-0.301319, -0.0718628, 0.0092995, 0.950766)
bones/33/rotation = Quaternion(0.650614, -0.0412112, 0.0145678, 0.75815)
bones/34/rotation = Quaternion(0.223626, -0.0611624, 0.0139443, 0.972654)
bones/36/rotation = Quaternion(-0.118168, 0.105182, 0.985117, 0.0672092)
bones/37/rotation = Quaternion(-0.207707, 0.0401464, -0.0213721, 0.977133)
bones/38/rotation = Quaternion(0.587294, 0.0240595, 0.0730059, 0.805716)
bones/39/rotation = Quaternion(0.224547, 0.061234, -0.0140068, 0.972437)

[node name="CamRoot" type="Node3D" parent="." index="3" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
script = ExtResource("3_sweqy")
player = NodePath("..")

[node name="CamYaw" type="Node3D" parent="CamRoot" index="0"]

[node name="CamPitch" type="Node3D" parent="CamRoot/CamYaw" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.949425, -0.313992, 0, 0.313992, 0.949425, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamRoot/CamYaw/CamPitch" index="0"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_i3pqv")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CamRoot/CamYaw/CamPitch/SpringArm3D" index="0"]
transform = Transform3D(1, 3.72529e-09, 0, -3.72529e-09, 1, 7.94093e-23, 0, -7.94093e-23, 1, 0, 0, 2.5)
current = true

[node name="FootstepSound" type="AudioStreamPlayer" parent="." index="5"]
bus = &"Footsteps"

[node name="PunchSound" type="AudioStreamPlayer" parent="." index="6"]
bus = &"Punches"

[connection signal="changed_aiming" from="." to="AnimationController" method="_aiming"]
[connection signal="changed_movement_direction" from="." to="MovementController" method="_on_set_movement_direction"]
[connection signal="changed_movement_state" from="." to="AnimationController" method="_on_set_movement_state"]
[connection signal="changed_movement_state" from="." to="MovementController" method="_on_set_movement_state"]
[connection signal="changed_movement_state" from="." to="CamRoot" method="_on_set_movement_state"]
[connection signal="pressed_jump" from="." to="MovementController" method="_jump"]
[connection signal="punch" from="." to="AnimationController" method="_punch"]
[connection signal="set_cam_rotation" from="CamRoot" to="MovementController" method="_on_set_cam_rotation"]

[editable path="MeshRoot/animated_monkey_man_trimmed"]
